<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/statisticsJournalExerciseDetailsListHeaderSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="end"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statisticsJournalExerciseDetailsListHeaderReps"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statisticsJournalExerciseDetailsListHeaderReps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/reps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statisticsJournalExerciseDetailsListHeaderWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/statisticsJournalExerciseDetailsListHeaderSet"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statisticsJournalExerciseDetailsListHeaderWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/statisticsJournalExerciseDetailsListHeaderReps"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>