<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.statistics.StatisticsActivity">

    <TextView
        android:id="@+id/statisticsPlotExercisesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistics_activity_exercise_spinner_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/statisticsPlotExercises"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/statisticsPlotExercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotExercisesLabel" />

    <TextView
        android:id="@+id/statisticsPlotPeriodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistics_activity_period_spinner_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/statisticsPlotExercises"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotExercises" />

    <Spinner
        android:id="@+id/statisticsPlotPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/statisticsPlotPeriods"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintEnd_toStartOf="@+id/statisticsPlotData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotPeriodLabel" />

    <TextView
        android:id="@+id/statisticsPlotDataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistics_activity_data_spinner_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/statisticsPlotData"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotExercises" />

    <Spinner
        android:id="@+id/statisticsPlotData"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/statisticsPlotDataType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statisticsPlotPeriod"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotDataLabel" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statisticsPlot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsPlotData" />

</android.support.constraint.ConstraintLayout>