<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.program.exercise.ProgramSetEditorFragment">

    <data>
        <variable
            name="set"
            type="ru.codingworkshop.gymm.data.entity.ProgramSet" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.codingworkshop.gymm.ui.common.CustomisableNumberPicker
            android:id="@+id/programSetRepsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:value="@={set.reps}"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:maxValue="200"
            app:minValue="1" />

        <ru.codingworkshop.gymm.ui.common.CustomisableNumberPicker
            android:id="@+id/programSetRestMinutesPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:value="@={set.minutes}"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:maxValue="9" />

        <ru.codingworkshop.gymm.ui.common.CustomisableNumberPicker
            android:id="@+id/programSetRestSecondsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:value="@={set.seconds}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:maxValue="55"
            app:step="5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/program_exercise_activity_dialog_rest_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reps"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:alpha="0.12"
            app:srcCompat="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/programSetRepsPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/programSetRestMinutesPicker"
            app:layout_constraintEnd_toStartOf="@+id/programSetRestSecondsPicker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/programSetRestMinutesPicker"
            app:layout_constraintTop_toBottomOf="@+id/programSetRestMinutesPicker" />

    </android.support.constraint.ConstraintLayout>
</layout>
