<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <NumberPicker
        android:id="@+id/program_exercise_reps_picker"
        app:layout_constraintTop_toTopOf="@+id/program_exercise_rest_minutes_picker"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="65dp"
        android:layout_height="wrap_content" />

    <NumberPicker
        android:id="@+id/program_exercise_rest_minutes_picker"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/program_exercise_rest_minutes_label"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.2"
        android:layout_width="65dp"
        android:layout_height="wrap_content" />

    <NumberPicker
        android:id="@+id/program_exercise_rest_seconds_picker"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/program_exercise_rest_seconds_label"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.8"
        android:layout_width="65dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/program_exercise_reps_label"
        android:text="@string/program_exercise_activity_reps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/program_exercise_reps_picker"
        app:layout_constraintRight_toRightOf="@+id/program_exercise_reps_picker"
        app:layout_constraintLeft_toLeftOf="@+id/program_exercise_reps_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/program_exercise_rest_time_label"
        android:text="@string/program_exercise_activity_dialog_rest_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/program_exercise_rest_seconds_picker"
        app:layout_constraintLeft_toLeftOf="@+id/program_exercise_rest_minutes_picker"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/program_exercise_rest_minutes_label"
        android:text="@string/program_exercise_activity_rest_time_minutes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/program_exercise_rest_time_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/program_exercise_rest_minutes_picker"
        app:layout_constraintLeft_toLeftOf="@+id/program_exercise_rest_minutes_picker"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/program_exercise_rest_seconds_label"
        android:text="@string/program_exercise_activity_rest_time_seconds_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintRight_toRightOf="@+id/program_exercise_rest_seconds_picker"
        app:layout_constraintLeft_toLeftOf="@+id/program_exercise_rest_seconds_picker"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/program_exercise_rest_time_label" />

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/program_exercise_reps_picker"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_width="1dp"
        app:layout_constraintHorizontal_bias="0.33"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        android:backgroundTintMode="add"
        android:alpha="0.12"
        android:background="@android:color/background_dark" />

</android.support.constraint.ConstraintLayout>